# discordbot-rust

./: .gitignore  README.md
bot/: Cargo.toml
bot/src/: lib.rs
bot/src/commands/: examples.rs
bot/src/event_handlers/: examples.rs
discord-bot/: README.md
discord-interactions/: Cargo.toml  README.md  config.toml.example  log4rs.yaml
discord-interactions/src/: lib.rs  security.rs
discord-interactions/src/commands/: app_commands.rs  command_parser.rs  hackerone.rs  mod.rs  modal_tests.rs
discord-interactions/src/commands/button_test/: command_interaction.rs  component_interaction.rs
discord-interactions/src/commands/components/: button_handler.rs  mod.rs
discord-interactions/src/commands/hackerone/: api_wrapper.rs  command_interaction.rs  component_interaction.rs  create_commands.rs  mod.rs
discord-interactions/src/commands/hackerone/persistence/: local.rs
discord-interactions/src/commands/json/: echo_modal.json
discord-interactions/src/commands/modal_test/: command_interaction.rs  create_commands.rs  mod.rs  modal_interaction.rs
discord-interactions/src/commands/ro_application/: command_interaction.rs  create_commands.rs  mod.rs  modal_interaction.rs
discord-interactions/src/commands/ro_endow/: command_interaction.rs  create_commands.rs
discord-interactions/src/commands/role_selection/: command_interaction.rs  create_commands.rs
discordbot-rust/: Cargo.toml  log4rs.yaml
discordbot-rust/src/: lib.rs  main.rs
discordbot-rust/src/commands/: app_commands.rs  command_parser.rs  debug_response.rs  mod.rs  modal_tests.rs
interactions/: .gitignore  Cargo.toml  README.md  log4rs.yaml
interactions/src/commands/: command_parser.rs  mod.rs
interactions/src/commands/button_test/: create_commands.rs
interactions/src/commands/role_selection/: command_interaction.rs  component_interaction.rs  mod.rs
interactions/src/commands/selectmenu_test/: command_interaction.rs  create_commands.rs
interactions/src/commands/slash_test/: command_interaction.rs  create_commands.rs
