[package]
name = "discordbot-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.5"
tokio = {version = "1.0.0", features=["full"]}
serde = {version = "1.0.0", features=["derive"]}
serde_derive = "1.0.0"
serde_json = "1.0.0"
hex = "0.4.3"
thiserror = "1.0.30"
hyper = {version = "0.14", features = ["full"]}
lazy_static = "1.4.0"
mongodb = "2.1.0"
chrono = "0.4"
bson = { version = "2", features = ["chrono-0_4"] }
anyhow = "1.0"

[dependencies.ed25519-dalek]
version = "1"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
default-features = true
features = ['gateway', 'model', 'client', 'http', 'rustls_backend', 'unstable_discord_api']
