[package]
name = "interactions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
axum = "0.4.5"
tokio = {version = "1.0.0", features=["full"]}
serde = {version = "1.0.0", features=["derive"]}
serde_derive = "1.0.0"
serde_json = "1.0.0"
hex = "0.4.3"
thiserror = "1.0.30"
hyper = {version = "0.14", features = ["full"]}
lazy_static = "1.4.0"
mongodb = "2.1.0"
chrono = "0.4"
bson = { version = "2", features = ["chrono-0_4"] }
anyhow = "1.0"
log4rs = "1.1.1"
log = "0.4.17"
serenity = {version = "0.11", default-features = true, features = ['gateway', 'model', 'client', 'http', 'rustls_backend', 'unstable_discord_api', 'builder']}
clap = { version = "3.1.12", features = ["derive"] }
config = "0.13.1"

[dependencies.ed25519-dalek]
version = "1"
